Default user status set to INACTIVE
Change initial user status to INACTIVE. Updated User.java to create users with UserStatus.INACTIVE and updated V3 migration SQL to set the users.status default to 'INACTIVE'. Ensures new accounts are inactive by default (e.g., pending verification/activation).